# tech-assessment

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile.chat  Dockerfile.dashboard  README.md  README_TRAVEL_AGENT.md  chat.py  dashboard.py  docker-compose.yml  pyproject.toml  report.md
data/processed/: synthetic_dataset_ragas.json
scripts/: acceptance_test_rag_retrieval.py  acceptance_test_streaming_telemetry.py  clear_index.py  download_corpus.py  evaluate_retrieval.py  generate_dataset.py  generate_dataset_ragas.py  index_data.py  run_rag.py
src/datacom_ai/: exceptions.py
src/datacom_ai/agent/: planning_agent.py
src/datacom_ai/agent/tools/: tool_factory.py  tools.py
src/datacom_ai/chat/: chat_handler.py  chunk_parsers.py  engine.py  message_store.py  models.py
src/datacom_ai/clients/: llm_client.py
src/datacom_ai/config/: settings.py
src/datacom_ai/rag/: adapters.py  embeddings.py  factories.py  indexing.py  loader.py  pipeline.py  retrieval.py
src/datacom_ai/self_heal/: agent.py  cli.py
src/datacom_ai/telemetry/: metrics.py
src/datacom_ai/ui/: gradio_ui.py  history_manager.py
src/datacom_ai/utils/: __init__.py  log_parser.py  logger.py  structured_logging.py
tests/: conftest.py  test_acceptance_quicksort.py  test_agent_tools_integration.py  test_planning_agent.py  test_retry_logic.py
tests/chat/: __init__.py  test_chat_handler.py  test_message_store.py
tests/clients/: test_llm_client.py
tests/telemetry/: __init__.py  test_metrics.py
tests/ui/: test_gradio_ui.py
