[project]
name = "datacom-ai"
version = "0.1.0"
description = "Production-grade AI platform for retrieval-augmented pipelines and reasoning agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "langchain-qdrant>=0.1.0",
    "qdrant-client>=1.9.0",
    "langchain>=0.3.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.0.10",
    "fastembed>=0.2.0",
    "onnxruntime>=1.20.0",
    "chromadb>=1.3.5",
    "langgraph>=0.0.10",
    "amadeus>=9.0.0",
    "googlemaps>=4.10.0",
    "langchain-google-community>=1.0.0",
    "gradio==5.49.1",
    "deepeval>=0.1.0",
    "ragas>=0.1.0",
    "rapidfuzz>=3.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

